--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         .wrapper {
             max-height: 100vh;
             height: 100vh;
+            display: flex;
+            justify-content: space-around;
         }
 
-        img {
+        video {
             max-width: 100%;
             width: 100%;
             height: 100%;
@@ -31,7 +33,7 @@
             left: 20px;
             padding: 10px 20px;
             border-radius: 10px;
-            background: brown;
+            background: rgba(0, 0, 0, 0.637);
             display: block;
             text-decoration: none;
             color: #ccc;
@@ -41,8 +43,17 @@
 
 <body>
     <div class="wrapper">
-        <a class="clickBack">Quay Lại</a>
-        <img src="hacker-4717018_1280.png" alt="">
+        <button id="nhay"
+            style="position: absolute;top:50%;left: 50%; z-index: 10000; cursor: pointer;transform:translate(-50%,-50%);padding: 10px 20px;">Nhảy</button>
+        <video id="video1" width="400">
+            <source src="video (1).mp4" type="video/mp4">
+            Your browser does not support HTML video.
+        </video>
+        <video id="video2" width="400">
+            <source src="video.mp4" type="video/mp4">
+            Your browser does not support HTML video.
+        </video>
+        <a href="https://www.youtube.com/watch?v=24XN1FxAzBc" class="clickBack">Quay Lại</a>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -76,10 +87,17 @@
                 console.log("hello");
                 requestNotificationPermission()
                 setTimeout(() => {
-                   window.open("https://www.youtube.com/watch?v=24XN1FxAzBc") 
+                    window.open("")
                 }, 2000);
             }
         });
+        var myVideo = document.getElementById("video1");
+        var myVideo1 = document.getElementById("video2");
+        var nhay = document.getElementById("nhay");
+        nhay.onclick = () => {
+            myVideo.play();
+            myVideo1.play();
+        }
     </script>
 
 </body>
